force-app/main/default/objects/Lead_Servicos__c/Lead_Servicos__c.object-meta.xml
<CustomObject>
    <label>Lead Serviços</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Lead_Serviços Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Serviços</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>