force-app/main/default/objects/Lead_Servicos__c/fields/Especialidades__c.field-meta.xml
<CustomField>
    <fullName>Especialidades__c</fullName>
    <label>Especialidades</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sem especialidade definida</fullName>
                <default>true</default>
                <label>Sem especialidade definida</label>
            </value>
            <value>
                <fullName>Alcatifa</fullName>
            </value>
            <value>
                <fullName>Alpendres</fullName>
            </value>
            <value>
                <fullName>Aplicação de Pladur e Estrutura</fullName>
            </value>
            <value>
                <fullName>Ar Condicionado</fullName>
            </value>
            <value>
                <fullName>Autoclismo PVC</fullName>
            </value>
            <value>
                <fullName>Banheiras</fullName>
            </value>
            <value>
                <fullName>Banheiras Hidromassagem</fullName>
            </value>
            <value>
                <fullName>BBQ</fullName>
            </value>
            <value>
                <fullName>Bloco de vidro</fullName>
            </value>
            <value>
                <fullName>Bombas de calor</fullName>
            </value>
            <value>
                <fullName>Cabines de base de duche</fullName>
            </value>
            <value>
                <fullName>Cabines e Paineis ITALBOX</fullName>
            </value>
            <value>
                <fullName>Cabines Hidromassagem</fullName>
            </value>
            <value>
                <fullName>Caldeiras Gás</fullName>
            </value>
            <value>
                <fullName>Caldeiras Gasóleo</fullName>
            </value>
            <value>
                <fullName>Caleiras</fullName>
            </value>
            <value>
                <fullName>Candeeiros</fullName>
            </value>
            <value>
                <fullName>CCTV</fullName>
            </value>
            <value>
                <fullName>Churrasqueiras</fullName>
            </value>
            <value>
                <fullName>Chuveiros de duche</fullName>
            </value>
            <value>
                <fullName>Cofres</fullName>
            </value>
            <value>
                <fullName>Colunas Hidromassagem</fullName>
            </value>
            <value>
                <fullName>Construção de Lareiras</fullName>
            </value>
            <value>
                <fullName>Eletrodomésticos</fullName>
            </value>
            <value>
                <fullName>Emissores calor</fullName>
            </value>
            <value>
                <fullName>Envernizamento portas</fullName>
            </value>
            <value>
                <fullName>Escadas interior</fullName>
            </value>
            <value>
                <fullName>Escadas sotão</fullName>
            </value>
            <value>
                <fullName>Esquentadores</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>