force-app/main/default/objects/Lead_Servicos__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Por contactar</fullName>
                <default>true</default>
                <label>Por contactar</label>
            </value>
            <value>
                <fullName>Contactado sem sucesso</fullName>
            </value>
            <value>
                <fullName>Em contacto</fullName>
            </value>
            <value>
                <fullName>Em negociação</fullName>
            </value>
            <value>
                <fullName>Concluído</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>