force-app/main/default/objects/Lead_Servicos__c/fields/NIF__c.field-meta.xml
<CustomField>
    <fullName>NIF__c</fullName>
    <label>NIF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>