force-app/main/default/objects/Lead_Servicos__c/fields/Nome_da_Lead__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_Lead__c</fullName>
    <label>Nome da Lead</label>
    <length>100</length>
    <type>Text</type>
</CustomField>